@@ -55,3 +55,4 @@ x2a
                 socketbase
                     clientsocket
                     serversocket
+    autoptr
