@@ -21,8 +21,8 @@ hierarchy:
 
 
 0   DateTime       SyslogBuf          RandBuffer        Indent      RefCount
-       |               |                   |
-     Stat         SyslogStream         IRandStream
+       |               |                   |                           |
+     Stat         SyslogStream         IRandStream                  AutoPtr
 
 0                             Errno                                   LogBuffer
                                 |                                        |
