@@ -1,0 +1,3 @@
+#!/bin/sh
+
+g++ -o autoptr autoptr.cc -lbobcat
