@@ -3,10 +3,13 @@ bobcat (1.12.2)
   * (ISN)
 
   * All function/member/constructor throw() specifications removed, following
-    Sutter & Alexandrescu's suggestions
+    Sutter & Alexandrescu's suggestions (except where required by external
+    classes, like std::exception.
 
   * RefCount's header missed `public:'. Repaired, thus making relase() et
-    al. public members, conform the RefCount manual page
+    al. public members, conform the RefCount manual page.
+
+  * Added template class `AutoPtr'
 
 bobcat (1.12.1)
 
